2006-10-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/texinfo/mu_address.texi: Added to the repository
	* doc/texinfo/mu_body.texi: Likewise
	* doc/texinfo/mu_logger.texi: Likewise
	* doc/texinfo/mu_mailbox.texi: Likewise
	* doc/texinfo/mu_message.texi: Likewise
	* doc/texinfo/mu_mime.texi: Likewise
	* doc/texinfo/mu_scm.texi: Likewise
	* doc/texinfo/.cvsignore: Update

2006-10-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Add support for Berkeley DB 3 and 4

	* auth/radius.c: Return meaningful error codes.
	* auth/sql.c: Likewise
	* auth/virtual.c: Likewise
	* mailbox/system.c: Likewise

	* sql/mysql.c (octet2hex): Rename to mu_octet_to_hex to avoid name
	clashes with mysql
	
	* config/Makefile.am (mailutils_config_CFLAGS): Define I18NLIBS
	inconditionally.
	* examples/Makefile.am (muath): New target

	* include/mailutils/mu_auth.h (enum mu_auth_key_type): New data
	type.
	(mu_get_auth): New function.
	* lib/mu_dbm.c: Support for Berkeley DB 3, 4
	* mailbox/mu_auth.c (mu_get_auth): New function.
	(mu_auth_runlist): Change return code convention: underlying calls
	should return meaningful error codes, not just 0/1.

	* examples/muauth.c: new file
	
2006-10-04  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libsieve/extensions/vacation.c (vacation_subject): Improve
	yesterday's fix, following Kostas' suggestion.

2006-10-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libsieve/prog.c (sieve_code_command): Avoid dead loop if a tag
	is not given the argument it requires. Improve the diagnostics.
	Bug reported by Kostas Zorbadelos.
	* libsieve/extensions/vacation.c (vacation_subject): Make sure
	subject is not null.

2006-09-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/action.c: Minor fixes
	* libproto/mbox/mboxscan.c (FAST_HEADER): Fix unfolding: Advance p
	only if ':' was found.
	Minor macro style fixes
	* mail/mail.h (struct mail_env_entry): New member v.bool
	* mail/set.c (mail_set): Init dummy to 1